package incidentes;

public enum TipoDeIncidente {
    TEMPERATURA_ALTA,
    TEMPERATURA_BAJA,
    FALLA_DE_CONEXION,
    FRAUDE,
    FALLA_TECNICA
}
